update all Dto's from class to Record keyword